fix button alignment on small screens; add update timestamp and link to version control

--- a/scripts/aaa-style.css
+++ b/scripts/aaa-style.css
@@ -26,9 +26,11 @@ h2 {
 }
 
 form {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     visibility: hidden;
-    text-align: center;
     margin-bottom: 30px;
 }
 input[type=tel] {
@@ -47,7 +49,6 @@ input[type=tel] {
     border-color: #4a4a4a;
     width: 84px;
     padding: 12px 14px 12px 14px;
-    margin-right: 8px;
     box-sizing: border-box;
 }
 input:focus {
@@ -110,7 +111,7 @@ a:active {
     border-color: #4a4a4a;
     cursor: pointer;
 }
-#jump { margin-right: 8px; }
+#jump-box { margin: 30px 8px; }
 #jump, #bott { padding: 12px 14px 12px 14px; }
 #jump:focus #bott:focus {
     outline: none;
